force-app/main/default/objects/vlocity_ins__ManualQueue__c/fields/vlocity_ins__DisplayedFields__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DisplayedFields__c</fullName>
    <label>Displayed Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>