force-app/main/default/objects/vlocity_ins__ManualQueue__c/fields/vlocity_ins__FilterFields__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FilterFields__c</fullName>
    <defaultValue>&quot;State as \&quot;State\&quot;;&quot;</defaultValue>
    <label>Filter Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>