force-app/main/default/objects/vlocity_ins__ManualQueue__c/fields/vlocity_ins__LastAssignedToUserId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LastAssignedToUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Assigned To User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Last Assigned User</relationshipLabel>
    <relationshipName>LastAssignedToUser</relationshipName>
    <type>Lookup</type>
</CustomField>