force-app/main/default/objects/vlocity_ins__ManualQueue__c/fields/vlocity_ins__QueueType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__QueueType__c</fullName>
    <label>Queue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Attributes-Based</fullName>
            </value>
            <value>
                <fullName>Round Robin</fullName>
            </value>
            <value>
                <fullName>Least Loaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>